--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,8 +12,17 @@
   font-style: normal;
 }
 
-main {
-  min-height: calc(100vh - 4rem - 224px);
+#root {
+  font-family: "GmarketSansMedium";
+  color: #374151;
+}
+
+section {
+  max-width: 1280px;
+  min-height: 900px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 /*.view_image {
